--- a/src/components/Feed/index.module.css
+++ b/src/components/Feed/index.module.css
@@ -1,6 +1,5 @@
 .feed {
-    flex: 1;
-    padding: 30px 150px;
+    width: 77%;
     display: flex;
     flex-direction: column;
     justify-content: center;
